--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <img src="https://encoded.pe/sanvalentin/mocha4.gif" alt="Osito Triste" style="width: 60%; height: 60%;">
         </div>
         
-        <h1 id="question">¿Quieres ser mi Novia?</h1>
+        <h1 id="question">¿Quieres ser mi Novia Hadita🧚?</h1>
         <div id="messageContainer" style="display: none;"></div>
 
         <button id="siBtn">Sí</button>
